# Layout.-DZ-21.2

./: pyproject.toml
src/: main.py  way.py
src/html/: categories.html  contact.html  main.html  orders.html
